force-app/main/default/objects/Billing_Address__c/Billing_Address__c.object-meta.xml
<CustomObject>
    <label>Billing Address</label>
    <nameField>
        <label>Billing Address Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>