force-app/main/default/objects/Billing_Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipName>Billing_Address</relationshipName>
    <type>Lookup</type>
</CustomField>