force-app/main/default/objects/Billing_Address__c/fields/Countrytext__c.field-meta.xml
<CustomField>
    <fullName>Countrytext__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>