force-app/main/default/objects/Billing_Address__c/fields/Haravan_Order__c.field-meta.xml
<CustomField>
    <fullName>Haravan_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Haravan Order</label>
    <referenceTo>Haravan_Order__c</referenceTo>
    <relationshipName>Billing_Address</relationshipName>
    <type>Lookup</type>
</CustomField>