force-app/main/default/objects/Billing_Address__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Province</label>
    <referenceTo>Province__c</referenceTo>
    <relationshipName>Billing_Address</relationshipName>
    <type>Lookup</type>
</CustomField>