force-app/main/default/objects/Billing_Address__c/fields/Ward__c.field-meta.xml
<CustomField>
    <fullName>Ward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ward</label>
    <referenceTo>Ward__c</referenceTo>
    <relationshipName>Billing_Address</relationshipName>
    <type>Lookup</type>
</CustomField>